--- a/homebrew_challenge/src/components/GeoHeatMap/GeoHeatMap.css
+++ b/homebrew_challenge/src/components/GeoHeatMap/GeoHeatMap.css
@@ -1,7 +1,6 @@
 .geo-map {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   margin: 0 auto;
   height: 100%;
   width: 100%;
@@ -29,7 +28,7 @@
   border: 2px solid rgba(0,0,0,0.2);
 }
 .legend .legend-title {
-  text-align: left;
+
   font-weight: bold;
 }
 .legend-line {
@@ -43,7 +42,7 @@
   opacity: 0.7;
 }
 .region-popup {
-  text-align: left;
+
 }
 .map-date-range {
   font-weight: bold;
