--- a/homebrew_challenge/src/components/HeatmapDataSelector/HeatmapDataSelector.css
+++ b/homebrew_challenge/src/components/HeatmapDataSelector/HeatmapDataSelector.css
@@ -19,11 +19,12 @@
 }
 
 .heatmap-selector .toggle-button-group {
-  margin: 0.5rem 0 0.5rem 0;
+  margin: 0;
+  height: 100%;
 }
 
 .heatmap-selector {
-  padding: 0 10px 10px;
+  padding: 0;
 }
 
 .heatmap-selector .selector-group {
@@ -32,5 +33,13 @@
 }
 
 .btn {
-  text-align: left;
+
+  font-size: 0.8rem;
+}
+
+@media screen and (max-width: 375px) {
+  .btn {
+
+    font-size: 0.8rem;
+  }
 }
